# bogo-beat-detection

./: .gitignore  CMakeLists.txt  arduinocomm.cpp  detector.cpp  fft.cpp  visualiser.cpp  wavconv.py
